apps/radarr/service.yaml
apiVersion: v1
kind: Service
metadata: {name: radarr, namespace: media}
spec:
  selector: {app.kubernetes.io/name: media-vpn}
  ports:
    - {name: http, port: 7878, targetPort: radarr}
---
apiVersion: v1
kind: Service
metadata: {name: radarr-access, namespace: media}
spec:
  selector: {app.kubernetes.io/name: media-vpn}
  ports:
    - {name: http, port: 80, targetPort: ra-access}
