apps/radarr/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata: {name: radarr, namespace: media}
spec:
  parentRefs:
    - {name: home, namespace: traefik}
  hostnames: [radarr.reza.network]
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: custom-errors
      backendRefs:
        - {name: radarr-access, port: 80}
